# reader3

./: .gitignore  CLAUDE.md  README.md  mcp_server.py  pyproject.toml  reader3.py  server.py
.claude/: settings.json
.claude/skills/verify-reader/: SKILL.md
docs/superpowers/plans/: 2026-06-01-dark-mode-and-css-extraction.md  2026-06-01-mcp-server.md  2026-06-01-responsive-reader.md
docs/superpowers/specs/: 2026-06-01-dark-mode-and-css-extraction-design.md  2026-06-01-mcp-server-design.md  2026-06-01-responsive-reader-design.md
static/css/: base.css  library.css  reader.css
static/js/: sidebar.js  theme.js
templates/: _theme_init.html  library.html  reader.html
